# aslam_rosbot

./: CMakeLists.txt  README.md  bresham.py  package.xml  poses.csv  run.py  setup.py
aslam_rosbot/: CMakeLists.txt  map_area.py  map_coverage.py  package.xml  rmse_map_error.py  run_aws_bookstore.py  run_house.py  run_office.py  run_willow.py  setup.py
aslam_rosbot/cfg/: informationGain.cfg  pathtofiles.cfg
aslam_rosbot/include/: map_extract.h
aslam_rosbot/launch/: aws_bookstore.launch  graph_dopt.launch  hospital.launch  house.launch  office.launch  single_willowGarage.launch  single_willowGarage_obs.launch
aslam_rosbot/maps/: .pgm  .yaml  file_to_convert.txt  full_house_map.pgm  full_modified_hospital_map.pgm  full_willow_map (copy).pgm  map_30mins_mpc.pgm  maps.pgm  maps.yaml  pose_graph.g2o  pose_graph.g2o_edges.txt  pose_graph_hospital_mpc.g2o  pose_graph_julio_office.g2o_nodes.txt  pose_graph_julio_willow.g2o_edges.txt  pose_graph_julio_willow.g2o_nodes.txt  strip_nodes_edges.py  (+12 more)
aslam_rosbot_27thJune_Julio_willow_1/: _mpc_rosbot_27thJune.pgm  _mpc_rosbot_27thJune.yaml  pose_graph.g2o
aslam_rosbot_27thJune_julio_office_1/: Office_orignal_edge_detection.pgm  _rosbot_27thJune.pgm  _rosbot_27thJune.yaml  office_full.pgm  office_full.yaml  office_full_test.pgm  pose_graph.g2o
aslam_rosbot_27thJune_our_office_1/: _rosbot_27thJune.pgm  _rosbot_27thJune.yaml  office_full_clean.pgm  our_office_jhdfsd.pgm
aslam_rosbot_27thJune_our_willow_1/: _mpc_rosbot_27thJune.pgm  _mpc_rosbot_27thJune.yaml  full_willow_map.pgm
aslam_rosbot_27thJune_our_willow_2/: _mpc_rosbot_27thJune.pgm  _mpc_rosbot_27thJune.yaml
launch/: exploration.launch  navigation_dwa.launch  navigation_mpc.launch  turtlebot_navigation_dwa.launch  turtlebot_navigation_mpc.launch  turtlebot_robot.launch.xml  turtlebot_rviz.launch  turtlebot_rviz_karto.launch
maps/: posegraph_map.g2o
param/: costmap_common_params.yaml  mapping_karto_g2o.yaml
rosbot_fsm/: CMakeLists.txt  package.xml
rosbot_mpc/: CMakeLists.txt  package.xml
rosbot_mpc/cfg/: NonLinearMPC.cfg  nmpc.yaml
rosbot_mpc/include/: nlmpc.h
rosbot_mpc/launch/: rosbot_mpc.launch
rosbot_mpc/src/: nlmpc.cpp
rviz_config/: config.rviz  rosbot_mpc.rviz  turtlebot_mpc.rviz
src/: costmap_client.cpp  explore.cpp  frontier_search.cpp  node.cpp
thesis_ws/: .gitignore  .gitmodules  README.md  box_plot_test.py  boxplot.py  final_plot.py  run.py
thesis_ws/src/graph_d_exploration/: CMakeLists.txt  package.xml
thesis_ws/src/graph_d_exploration/action/: ChooseGoal.action  MergePoints.action
thesis_ws/src/graph_d_exploration/launch/: file.launch  multiple.launch  servers.launch
thesis_ws/src/graph_d_exploration/launch/include/: graph_dopt.launch  move_baseSafe.launch  robot.launch.xml
thesis_ws/src/graph_d_exploration/launch/include/rviz_config/: multiple.rviz  multiple_robots.rviz  multiple_robots2 copy.rviz  multiple_robots2.rviz  single1.rviz
thesis_ws/src/graph_d_exploration/launch/include/urdf/: rosbot.gazebo  rosbot.xacro
thesis_ws/src/graph_d_exploration/launch/include/worlds/hospital/: hospital.world  hospital_modified.world
thesis_ws/src/graph_d_exploration/launch/include/worlds/office/: office.world
thesis_ws/src/graph_d_exploration/launch/include/worlds/small_house/: small_house.world
thesis_ws/src/graph_d_exploration/msg/: BoolArray.msg  ChooseGoalActionFeedback.msg  ChooseGoalActionGoal.msg  ChooseGoalGoal.msg  InfoMatrix.msg  MergePointsAction.msg  MergePointsActionGoal.msg  MergePointsActionResult.msg  MergePointsGoal.msg  MergePointsResult.msg
thesis_ws/src/graph_d_exploration/param/: base_global_planner_params.yaml  base_local_planner_params.yaml  global_costmap_params.yaml  identity_transform.yaml  local_costmap_params.yaml  trajectory_planner.yaml
thesis_ws/src/graph_d_exploration/param/robot_0/: exploration.yaml  mapping_karto_g2o.yaml
thesis_ws/src/graph_d_exploration/param/robot_1/: costmap_common_params.yaml  exploration.yaml  mapping_karto_g2o.yaml
thesis_ws/src/graph_d_exploration/param/robot_2/: exploration.yaml  mapping_karto_g2o.yaml
thesis_ws/src/graph_d_exploration/param/robot_3/: costmap_common_params.yaml  exploration.yaml  mapping_karto_g2o.yaml
thesis_ws/src/graph_d_exploration/scripts/: client_choose.py  client_merge.py  constants.py  controller_graphD.py  filter.py  functions.py  initializer.py  manager.py  server_choose.py  server_merge.py  weighted_pose_graph_class.py
thesis_ws/src/graph_d_exploration/src/: local_rrt_detector.cpp
turtlebot_transform/: frames.gv
urdf/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro  kobuki_standalone.urdf.xacro
validation/: 3dplot_test.py  PoseGraph_map.g2o  algebric_connetivity.py  analyze_graph_var_FIM.py  average_degree.py  averageplot.py  calc_MST.py  d-opt.txt  graph_to_g2o.py  no_of_Spannig_trees.py  nodes.txt  pose_graph_hospital_mpc.g2o  pose_graph_hospital_mpc_stripped_edges.txt  poses.csv  poses.txt  savgol_filter.py  strip_nodes_edges.py  utils.py  weighted_pose_graph_class.py
validation/ceres_optimization/slam/optimize_pose_edges/: CMakeLists.txt  ceres_optimizer_test.cpp  read_op_two_files.cpp
validation/ceres_optimization/slam/pose_graph_2d/: CMakeLists.txt
worlds/: aws_house_modified.world  willowgarage_modified.world
(+154 files in other folders)
